--- a/index.html
+++ b/index.html
@@ -57,16 +57,14 @@
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="row">
                 <div class="col-md-8">
-                    <h1>Константин Лашкевич</h1>
-                    <p class="undertitle">Инвестор IT, ed-tech, LMS <br> Реальный практик корпоративного управления <i>идеолог Позитивного Менеджмента</i></p>
+                    <h1>Лашкевич Екатерина Александровна</h1>
+                    <p class="undertitle">Life-коуч, кандидат экономических наук,<br> выпускница Международного эриксоновского<br> университета коучинга, лидер команды Тони Роббинса </p>
                     <div class="card">
                         <ul>
-                            <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>№1</b> в России по трансформации корпоративной культуры для Х-кратного роста</span></li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами топ Forbes</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">5 лет на позиции Президента холдинга RFP Group</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинги “ННК” и “Вторчермет НЛМК” и вывел в лидеры рынка</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">защитила диссертацию по маркетингу</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">мама троих детей</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">написала книгу о материнстве</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">прошла обучение у Тони Роббинса,  Мантэка Чиа, Мастера Ю Джи Шина,</li>
                         </ul>
                     </div>
                     <div class="works">
@@ -77,7 +75,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/ekaterina.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -93,28 +91,38 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 d-flex justify-content-center">
                     <div class="card_transparent">
-                        <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
-                        <h5>Константин Лашкевич</h5>
+                        <div class="icon_avatar" style="background-image: url('img/sec_bio/ekaterina.jpg')"></div>
+                        <h5>Екатерина Лашкевич </h5>
                         <div class="soc_links_wrapp">
-                            <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
+                        <!--    <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
                             <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                            <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                            <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
+                            <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>  -->
+                            <a href="https://www.instagram.com/kate.lashkevich/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
                         </div>
-                        <a href="#" class="btn btn-blue">История взлетов и падений</a>
+                  <!--      <a href="#" class="btn btn-blue">История взлетов и падений</a>  -->
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes, 11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда я создал несколько бизнесов,
-                            чтобы оплатить свое обучение по специальности “Менеджмент”. </p>
-                        <p>Спустя долгие годы собственного бизнеса и управления холдингами - я собрал резульаттивные практики, методы, инструменты и стратегии в методологию “Позитивного Менеджмента”. <br> Я обучаю этому ТОП-менеджеров крупных
-                            компаний и собственников, помогая им создавать эффективные команды и выводить холдинги в лидеры отрасли. </p>
-                        <p>Я верю в то, что мотивация людей через обучение и стремление к высоким целям создает прорывы в личных и корпоративных результатах. Моя идеология подтверждена практикой и сейчас я рад передать свои знания и навыки через
-                            <span class="font-weight-bold">Акселерацию Людей и Бизнесов.</span></p>
-                        <p class="font-weight-bold"><i>“Позитивный менеджмент - это новые прорывы, достижения и успех!”</i> </p>
+                        <p>ДАВАЙТЕ ЗНАКОМИТЬСЯ <br> Меня зовут Екатерина
+                          Я закончила Международный Эриксоновский университет коучинга. теперь я Life-коуч ICF по личному росту и отношениям, клиенты в разных странах мира
+                          Больше 16 лет жена СЕО трех холдингов  с акционерами из списка Forbes и при этом мама троих детей
+                          Кандидат экономических наук в области маркетинга
+                        </p>
+                        <p> Я не психолог и не психиатр - я практик этой Жизни На все 100% <br>
+                        Я прожила этот опыт сама и выходила на новый уровень через учителей и собственные инсайты
+                        Эксперт по мужским состояниям, мастер SSF:<br>
+                        1)Ресурсное 💪<br>
+                        2)Финансовое 💵<br>
+                        3)Состояние удовлетворенности ✨<br>
+                        Только эффективные результативные и при этом экологичные методы.
+                        Провожу персональные коуч сессии по вопросам: отношений и выхода на новый уровень💥💥💥
+                         </p>
+                        <p>Последние 5 лет занимаюсь изучением вопросов женственности, женского счастья, работы с интуицией и подсознанием, медитации.
+                        Женский ментор по вопросам женственности и ресурсного состояния.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -124,17 +132,18 @@
     <!-- sec_offer -->
     <section id="my_expertize" class="sec sec_offer">
         <div class="container">
+            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <div class="row align-items-center justify-content-between">
-                <div class="col col-md-6 left-col">
-                    <div class="embed-responsive embed-responsive-16by9">
+               <div class="col col-md-6 left-col">
+                <!--     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="col-xl-7 col-md-6 right-col">
-                    <p class="main-txt">
-                        С теми кто жаждет результатов, я готов делиться практиками, инструментами и стратегиями позитивного менеджмента. Хочешь я стану твоим наставником в карьере и бизнесе для Х-кратного роста?
-                    </p>
-                    <a href="#" class="btn btn-orange">
+                <div class="col-xl-7 col-md-6 right-col main-txt">
+                    <h2>В вопросах успеха и радости жизни в каждом ее моменте, в формировании и достижении жизни твоей мечты. для женщин вопросы женственности и женского счастья </h2>
+                    <p>Ты научишься не только мечтать, но и воплощать эти мечты в реальность. Получишь ощущение счастья и реализации притягательного будущего.</p>
+                    <a href="#" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
@@ -145,7 +154,7 @@
     <section id="my-projects" class="sec sec_my_projects">
         <img alt="" class="abs_pic brain" src="img/abs_pic/brain.svg">
         <div class="container">
-            <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
+        <!--    <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic cup" src="img/abs_pic/cup.svg">
             <div class="sec_title">
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
@@ -355,13 +364,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="card card-with-table">
                 <img alt="" class="abs_pic stone2" src="img/abs_pic/stone.svg">
                 <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
                 <img alt="" class="abs_pic circle2" src="img/abs_pic/circle.svg">
                 <div class="media align-items-center">
-                    <div class="border-image" style="background-image: url('img/sec_bio/konstantin.jpg');">
+                    <div class="border-image" style="background-image: url('img/sec_bio/ekaterina.jpg');">
                     </div>
                     <div class="text">
                         <p class="text-title">Задай вопрос и я тебе обязательно отвечу</p>
@@ -384,7 +393,7 @@
                             <tbody>
                                 <tr>
                                     <th scope="row">1</th>
-                                    <td class="expertise">Менеджемент</td>
+                                    <td class="expertise">Ресурсное состояние</td>
                                     <td>101</td>
                                     <td>3</td>
                                     <td>6</td>
@@ -392,7 +401,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
-                                    <td class="expertise">Нетворкинг</td>
+                                    <td class="expertise">Работа с ограничивающими убеждениями</td>
                                     <td>98</td>
                                     <td>6</td>
                                     <td>9</td>
@@ -400,7 +409,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
-                                    <td class="expertise">Кратный рост</td>
+                                    <td class="expertise">Отношения</td>
                                     <td>11</td>
                                     <td>3</td>
                                     <td>4</td>
@@ -408,7 +417,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
-                                    <td class="expertise">Карьера </td>
+                                    <td class="expertise">Внутренний баланс </td>
                                     <td>76</td>
                                     <td>1</td>
                                     <td>11</td>
@@ -416,7 +425,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
-                                    <td class="expertise">Бизнес</td>
+                                    <td class="expertise">Эмоциональный интеллект</td>
                                     <td>4</td>
                                     <td>0</td>
                                     <td>20</td>
@@ -430,7 +439,7 @@
         </div>
     </section>
     <!-- sec_my_contacts -->
-    <section id="contacts" class="sec sec_my_contacts">
+<!--    <section id="contacts" class="sec sec_my_contacts">
         <div class="container">
             <img alt="" class="abs_pic dubl_stone d-md-block d-none" src="img/abs_pic/dubl_stone.svg">
             <img alt="" class="abs_pic dubl_line_down" src="img/abs_pic/dubl_line.svg">
@@ -530,9 +539,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- / sec_my_contacts -->
-    <section id="my_articles" class="sec sec_my_articles">
+<!--    <section id="my_articles" class="sec sec_my_articles">
         <div class="container">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -607,9 +616,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- sec_my_articles -->
-    <section class="sec sec_latest_events">
+  <!--  <section class="sec sec_latest_events">
         <div class="container">
             <div class="sec_title">
                 <img src="img/sec_latest_events/title_label.svg" alt="title_label">
@@ -637,7 +646,7 @@
     </section>
     <!-- / sec_my_articles -->
     <!-- sec_success_stories -->
-    <section id="reviews" class="sec sec_success_stories">
+<!--    <section id="reviews" class="sec sec_success_stories">
         <div class="container">
             <img alt="" class="abs_pic stone_orange" src="img/abs_pic/stone_orange.svg">
             <img alt="" class="abs_pic stone_orange_bottom" src="img/abs_pic/stone_orange.svg">
@@ -682,7 +691,7 @@
     </section>
     <!-- / sec_success_stories -->
 
-    <section id="me_mentor" class="sec sec_your_mentor">
+  <!--  <section id="me_mentor" class="sec sec_your_mentor">
         <div class="container">
 
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -707,7 +716,7 @@
     </section>
 
     <!-- sec_12 -->
-    <section class="sec sec_12">
+  <!--  <section class="sec sec_12">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
