konstantin  product start

--- a/index.html
+++ b/index.html
@@ -23,25 +23,16 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#about-expert">Об эксперте</a>
+                    <a class="nav-link" href="#about-expert">Програма курса</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#my-projects">Мои проекты</a>
+                    <a class="nav-link" href="#my-projects">Моя экспертность</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#my_expertize">Моя экспертность</a>
+                    <a class="nav-link" href="#my_expertize">Отзывы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contacts">Деловые контакты </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#my_articles">Мои статьи</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#reviews">Отзывы</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#me_mentor">Я - наставник</a>
+                    <a class="nav-link" href="#contacts">Я - наставник</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -51,39 +42,80 @@
     </nav>
     <!-- / fixed header -->
     <!-- sec_profile -->
-    <section class="sec sec_profile">
+    <!-- sec_product -->
+    <section class="sec sec_product">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
             <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
             <div class="row">
+                <div class="col-12">
+                    <h1>12 шагов для Х-кратного <br> роста в карьере и бизнесе</h1>
+                </div>
                 <div class="col-md-8">
-                    <h1>Константин Лашкевич</h1>
-                    <p class="undertitle">Инвестор IT, ed-tech, LMS <br> Реальный практик корпоративного управления <i>идеолог Позитивного Менеджмента</i></p>
-                    <div class="card">
-                        <ul>
-                            <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>№1</b> в России по трансформации корпоративной культуры для Х-кратного роста</span></li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами топ Forbes</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">5 лет на позиции Президента холдинга RFP Group</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинги “ННК” и “Вторчермет НЛМК” и вывел в лидеры рынка</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert</li>
-                        </ul>
+                    <div class="undertitle_wrapp">
+                        <div class="date_wrap">
+                            <div class="item">
+                                <span>Старт</span>
+                                <div class="date">
+                                    <div>20</div>
+                                    <span>май</span>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <span>Финиш</span>
+                                <div class="date">
+                                    <div>29</div>
+                                    <span>май</span>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="undertitle">Как выйти на новый уровень: <br> менеджмент, командА, <br>  Х-кратный рост?</p>
                     </div>
-                    <div class="works">
-                        <img src="img/sec_1/work_1.png" alt="">
-                        <img src="img/sec_1/work_2.png" alt="">
-                        <img src="img/sec_1/work_3.png" alt="">
+                    <div class="card">
+                        <p>Х-кратный рост в карьере и бизнесе - это давно не удача. Он обеспечивается за счет четкого планирования, развития важных навыков в команде и создания корпоративной култьуры лидерства. И только ты решаешь, каких результатов добиваться! Создай машину по зарабатыванию денег!</p>
+                        <div class="card__footer">
+                            <span class="price">$99</span>
+                            <a href="" class="btn btn-success">Принять участие</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_your_mentor/konstantin.png" alt="SE">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- / sec_profile -->
+    <!-- / sec_product -->
+
+    <!-- sec_goal -->
+    <section id="about-expert" class="sec sec_goal">
+        <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
+            <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
+            <div class="sec_title">
+                <img src="img/sec_my_projects/title_label.svg" alt="title_label">
+                <h2>Достижение целей и карьерный рост</h2>
+            </div>
+            <div class="row justify-content-between">
+                <div class="col-lg-4">
+                    <div class="img_wrapp"><img src="img/sec_goal/goal.svg" alt="goal"></div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="card">
+                        <h4>Константин Лашкевич</h4>
+                        <p>Трансформация мышления, мотивация действовать и желание развиваться - вот ключ к успешному карьерному росту в современных реалиях. Сейчас крупные компании хотят видеть менеджеров и Топ-Менеджеров, которые умеют и готовы выложиться на полную для достижения результатов! И это - ваше преимущество в борьбе за карьерный рост. </p>
+                        <p style="font-weight: 600;">Твоя карьера - это твой бизнес. Ты продаешь свой навык менеджера и свою результативность.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_goal -->
+
     <!-- sec_bio -->
     <section id="about-expert" class="sec sec_bio">
         <div class="container">
@@ -121,6 +153,44 @@
         </div>
     </section>
     <!-- / sec_bio -->
+
+    <!-- / sec_profile -->
+    <!-- sec_profile -->
+    <section class="sec sec_profile">
+        <div class="container">
+            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
+            <img alt="" class="abs_pic dubl_line_vertical" src="img/abs_pic/dubl_line.svg">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1>Константин Лашкевич</h1>
+                    <p class="undertitle">Инвестор IT, ed-tech, LMS <br> Реальный практик корпоративного управления <i>идеолог Позитивного Менеджмента</i></p>
+                    <div class="card">
+                        <ul>
+                            <li><img src="img/sec_1/ok.svg" alt="ok"><span><b>№1</b> в России по трансформации корпоративной культуры для Х-кратного роста</span></li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">20 лет в бизнесе с акционерами топ Forbes</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">11 лет управления холдингами</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">5 лет на позиции Президента холдинга RFP Group</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Возглавлял холдинги “ННК” и “Вторчермет НЛМК” и вывел в лидеры рынка</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Инвестор в проекте Smart Expert</li>
+                        </ul>
+                    </div>
+                    <div class="works">
+                        <img src="img/sec_1/work_1.png" alt="">
+                        <img src="img/sec_1/work_2.png" alt="">
+                        <img src="img/sec_1/work_3.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="img_wrapp">
+                        <img src="img/sec_1/konstantin.png" alt="SE">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / sec_profile -->
+
+
     <!-- sec_offer -->
     <section id="my_expertize" class="sec sec_offer">
         <div class="container">
