--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 <img src="img/sec_my_projects/title_label.svg" alt="title_label">
                 <h2>Достижение целей и карьерный рост</h2>
             </div>
-            <div class="row justify-content-between">
+            <div class="row">
                 <div class="col-lg-4">
                     <div class="img_wrapp"><img src="img/sec_goal/goal.svg" alt="goal"></div>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 d-flex justify-content-end">
                     <div class="card">
                         <h4>Константин Лашкевич</h4>
                         <p>Трансформация мышления, мотивация действовать и желание развиваться - вот ключ к успешному карьерному росту в современных реалиях. Сейчас крупные компании хотят видеть менеджеров и Топ-Менеджеров, которые умеют и готовы выложиться на полную для достижения результатов! И это - ваше преимущество в борьбе за карьерный рост. </p>
@@ -115,44 +115,6 @@
         </div>
     </section>
     <!-- / sec_goal -->
-
-    <!-- sec_bio -->
-    <section id="about-expert" class="sec sec_bio">
-        <div class="container">
-            <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
-            <img alt="" class="abs_pic circle_orange" src="img/abs_pic/circle_orange.svg">
-            <img alt="" class="abs_pic stone" src="img/abs_pic/stone.svg">
-            <div class="row align-items-center">
-                <div class="col-lg-5 d-flex justify-content-center">
-                    <div class="card_transparent">
-                        <div class="icon_avatar" style="background-image: url('img/sec_bio/konstantin.jpg')"></div>
-                        <h5>Константин Лашкевич</h5>
-                        <div class="soc_links_wrapp">
-                            <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                            <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                            <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                            <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                            <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                        </div>
-                        <a href="#" class="btn btn-blue">История взлетов и падений</a>
-                    </div>
-                </div>
-                <div class="col-lg-7">
-                    <div class="card">
-                        <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>Привет! <br> Меня зовут Константин Лашкевич. Уже более 20 лет я в бизнесе с акционерами Forbes, 11 лет управлял холдингами и выводил их в лидеры отрасли. Мой путь начался в университете, когда я создал несколько бизнесов,
-                            чтобы оплатить свое обучение по специальности “Менеджмент”. </p>
-                        <p>Спустя долгие годы собственного бизнеса и управления холдингами - я собрал резульаттивные практики, методы, инструменты и стратегии в методологию “Позитивного Менеджмента”. <br> Я обучаю этому ТОП-менеджеров крупных
-                            компаний и собственников, помогая им создавать эффективные команды и выводить холдинги в лидеры отрасли. </p>
-                        <p>Я верю в то, что мотивация людей через обучение и стремление к высоким целям создает прорывы в личных и корпоративных результатах. Моя идеология подтверждена практикой и сейчас я рад передать свои знания и навыки через
-                            <span class="font-weight-bold">Акселерацию Людей и Бизнесов.</span></p>
-                        <p class="font-weight-bold"><i>“Позитивный менеджмент - это новые прорывы, достижения и успех!”</i> </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- / sec_bio -->
 
     <!-- / sec_profile -->
     <!-- sec_profile -->
